fix pamphlet on mobile

--- a/components/Pamphlet/Pamphlet.less
+++ b/components/Pamphlet/Pamphlet.less
@@ -65,8 +65,9 @@
 }
 
 .button {
-  width: 367px;
+  width: 100%;
   height: 28px;
   font-size: 13px;
+  padding: 8px 0px 8px 0px !important;
   box-sizing: content-box;
 }
